--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Play Monster Survivors - Online Game</title>
     <link rel="canonical" href="https://PlayMonsterSurvivors.com">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MTDQEH5LEG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MTDQEH5LEG');
+</script>
     <style>
         body {
             font-family: Arial, sans-serif;
